[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "IndexMaker Common Library"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
ethers = { workspace = true, optional = true }
stylus-sdk = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
stylus-sdk = { workspace = true, features = ["stylus-test"] }

[features]
default = ["vec-u8"]
amount-sqrt = []
debug = []
vec-u128 = []
vec-u8 = []

# if we're compiling smart-contracts
stylus = ["stylus-sdk", "stylus-sdk/mini-alloc", "stylus-sdk/reentrant"]

# if we're compiling smart-contracts with debug enabled
stylus-debug = ["stylus", "stylus-sdk/debug", "debug"]

# if we're compiling smart-contracts tests
stylus-test = ["stylus-sdk", "stylus-sdk/stylus-test"]

# if we're compiling app that uses ethers
with-ethers = ["ethers"]

[lib]
crate-type = ["lib", "cdylib"]
