[package]
name = "deli"
version = "0.1.0"
edition = "2021"
description = "Arbitrum Stylup Interoperability Library"

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
ethers = { workspace = true, optional = true }
stylus-sdk = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["sha3-keccak"] }
stylus-sdk = { workspace = true, features = ["stylus-test"] }

[features]
default = ["vec-u8"]
debug = []
vec-u128 = []
vec-u8 = []
amount-sqrt = []
stylus = ["stylus-sdk"]
stylus-test = ["stylus", "debug"]
export-abi = ["stylus-sdk/export-abi"]
with-ethers = ["ethers"]

[lib]
crate-type = ["lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
opt-level = "s"
