[package]
name = "icore"
version = "0.1.0"
edition = "2021"
description = "Index Core Library"

[lib]
crate-type = ["lib"]

[dependencies]
deli = { workspace = true }
amount-macros = { workspace = true }
devil-macros = { workspace = true }
labels-macros = { workspace = true }
vector-macros = { workspace = true }

[features]
debug = ["deli/debug"]
stylus = ["deli/stylus"]
reentrant = ["deli/reentrant"]
stylus-test = ["stylus", "deli/stylus-test", "debug"]